--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
   "name": "RedisFire",
   "version": "0.0.1-a",
+  "author": {
+    "name": "Jongsoon Park",
+    "email": "althjs@gmail.com"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "node ./utils/postinstall"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:althjs/redisfire.git"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">=0.12",
+    "iojs": ">=2.0",
+    "npm": ">=2.0"
+  },
+  "homepage": "https://github.com/althjs/redisfire/#readme",
   "bin": {
     "redisfire": "./bin/redisfire",
     "redisfire-import": "./bin/redisfire-import"
