--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "RedisFire",
+  "name": "redisfire",
   "version": "0.0.1-a",
-  "author": {
-    "name": "Jongsoon Park",
-    "email": "althjs@gmail.com"
-  },
+  "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "node ./utils/postinstall"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:althjs/redisfire.git"
+    "url": "git+ssh://git@github.com/althjs/redisfire.git"
   },
   "license": "MIT",
   "engines": {
-    "node": ">=0.12",
-    "iojs": ">=2.0",
-    "npm": ">=2.0"
+    "node": ">=0.8.0"
   },
   "homepage": "https://github.com/althjs/redisfire/#readme",
   "bin": {
@@ -25,24 +20,31 @@
     "redisfire-import": "./bin/redisfire-import"
   },
   "dependencies": {
-      "body-parser": "~1.0.0",
-      "commander": "^2.8.1",
-      "cookie-parser": "~1.0.1",
-      "debug": "~0.7.4",
-      "express": "~4.*",
-      "lodash": "~3.10.*",
-      "morgan": "~1.4.*",
-      "node-json-minify": "0.1.4-a",
-      "q": "1.0.1",
-      "request": "2.40.*",
-      "socket.io": "^1.3.7",
-      "swig": "1.4.*",
-      "underscore": "1.8.*",
-      "winston": "0.8.*",
-      "redis": "2.1.*",
-      "jade": "1.*"
+    "body-parser": "~1.0.0",
+    "commander": "^2.8.1",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "express": "~4.*",
+    "lodash": "~3.10.*",
+    "morgan": "~1.4.*",
+    "node-json-minify": "0.1.4-a",
+    "q": "1.0.1",
+    "request": "2.40.*",
+    "socket.io": "^1.3.7",
+    "swig": "1.4.*",
+    "underscore": "1.8.*",
+    "winston": "0.8.*",
+    "redis": "2.1.*",
+    "jade": "1.*"
   },
-  "engines": {
-    "node": ">=0.8.0"
-  }
+  "description": "RedisFire is not related with FireBase. But RedisFire provides very similar features like FireBase.",
+  "bugs": {
+    "url": "https://github.com/althjs/redisfire/issues"
+  },
+  "main": "bin/www",
+  "keywords": [
+    "RedisFire",
+    "Firebase",
+    "Realtime"
+  ]
 }
