--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.1-a",
+  "version": "0.0.2",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "start": "node ./bin/www",
