--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "start": "node ./bin/www",
@@ -43,8 +43,11 @@
   },
   "main": "bin/www",
   "keywords": [
-    "Redisfire",
-    "Firebase",
-    "Realtime"
+    "redisfire",
+    "firebase",
+    "fealtime",
+	"socket.io",
+	"redis",
+	"express"
   ]
 }
