--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "start": "node ./bin/www",
@@ -25,17 +25,18 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.*",
+    "jade": "1.*",
     "lodash": "~3.10.*",
+    "md5": "^2.0.0",
     "morgan": "~1.4.*",
     "node-json-minify": "0.1.4-a",
     "q": "1.0.1",
+    "redis": "2.1.*",
     "request": "2.40.*",
     "socket.io": "^1.3.7",
     "swig": "1.4.*",
     "underscore": "1.8.*",
-    "winston": "0.8.*",
-    "redis": "2.1.*",
-    "jade": "1.*"
+    "winston": "0.8.*"
   },
   "description": "Redisfire is not related with Firebase. But Redisfire provides very similar features like Firebase.",
   "bugs": {
@@ -46,8 +47,8 @@
     "redisfire",
     "firebase",
     "fealtime",
-	"socket.io",
-	"redis",
-	"express"
+    "socket.io",
+    "redis",
+    "express"
   ]
 }
