--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   ],
   "devDependencies": {
     "coveralls": "^2.11.4",
+    "mocha": "2.3.3",
     "mocha-lcov-reporter": "^1.0.0",
     "nyc": "^3.2.2"
   }
