--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mocha-lcov-reporter": "^1.0.0",
     "nyc": "^3.2.2",
     "should": "7.1.1",
+    "socket.io-client": "^1.3.7",
     "supertest": "^1.1.0"
   }
 }
