check module dependencies

--- a/package.json
+++ b/package.json
@@ -21,23 +21,22 @@
     "redisfire-import": "./bin/redisfire-import"
   },
   "dependencies": {
-    "body-parser": "~1.0.0",
-    "commander": "^2.8.1",
-    "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
-    "express": "~4.*",
+    "body-parser": "1.14.*",
+    "commander": "^2.9.*",
+    "cookie-parser": "1.4.*",
+    "debug": "2.2.*",
+    "express": "4.*",
     "jade": "1.*",
     "lodash": "~3.10.*",
     "md5": "^2.0.0",
-    "morgan": "~1.4.*",
+    "morgan": "1.6.*",
     "node-json-minify": "0.1.4-a",
-    "q": "1.0.1",
-    "redis": "2.1.*",
-    "request": "2.40.*",
-    "socket.io": "^1.3.7",
+    "q": "1.4.*",
+    "redis": "2.2.*",
+    "request": "2.*",
+    "socket.io": "^1.3.*",
     "swig": "1.4.*",
-    "underscore": "1.8.*",
-    "winston": "0.8.*"
+    "winston": "1.1.*"
   },
   "description": "Redisfire is not related with Firebase. But Redisfire provides very similar features like Firebase.",
   "bugs": {
