--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "postinstall": "node utils/postinstall",
@@ -32,11 +32,11 @@
     "morgan": "1.6.*",
     "node-json-minify": "0.1.4-a",
     "q": "1.4.*",
-    "redis": "2.2.*",
+    "redis": "2.3.*",
     "request": "2.*",
     "socket.io": "^1.3.*",
     "swig": "1.4.*",
-    "winston": "1.1.*"
+    "winston": ">=2.0"
   },
   "description": "Redisfire is not related with Firebase. But Redisfire provides very similar features like Firebase.",
   "bugs": {
