--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.23",
+  "version": "0.0.24",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "postinstall": "node utils/postinstall",
@@ -30,9 +30,9 @@
     "lodash": "~3.10.*",
     "md5": "^2.0.0",
     "morgan": "1.6.*",
-    "node-json-minify": "0.1.4-a",
+    "node-json-minify": "1.*",
     "q": "1.4.*",
-    "redis": "2.3.*",
+    "redis": "2.4.*",
     "request": "2.*",
     "socket.io": "^1.3.*",
     "swig": "1.4.*",
