--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "postinstall": "node utils/postinstall",
@@ -21,21 +21,21 @@
     "redisfire-import": "./bin/redisfire-import"
   },
   "dependencies": {
-    "body-parser": "1.14.*",
+    "body-parser": "1.15.*",
     "commander": "^2.9.*",
     "cookie-parser": "1.4.*",
     "debug": "2.2.*",
     "express": ">4.5",
     "jade": "1.*",
-    "lodash": "~3.10.*",
+    "lodash": "~4.*",
     "md5": "^2.0.0",
-    "morgan": "1.6.*",
+    "mongoose": "^4.3.*",
+    "morgan": "1.7.*",
     "node-json-minify": "1.*",
     "q": "1.4.*",
-    "redis": "2.4.*",
+    "redis": "2.6.*",
     "request": "2.*",
     "socket.io": "^1.3.*",
-    "swig": "1.4.*",
     "winston": ">=2.0"
   },
   "description": "Redisfire is not related with Firebase. But Redisfire provides very similar features like Firebase.",
