--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "redisfire-import": "./bin/redisfire-import"
   },
   "dependencies": {
-    "body-parser": "1.15.*",
+    "body-parser": "1.17.*",
     "commander": "^2.9.*",
     "cookie-parser": "1.4.*",
-    "debug": "2.2.*",
+    "debug": "2.6.*",
     "express": ">4.5",
     "jade": "1.*",
     "lodash": "~4.*",
     "md5": "^2.0.0",
     "mongoose": "^4.3.*",
-    "morgan": "1.7.*",
+    "morgan": "1.8.*",
     "node-json-minify": "1.*",
-    "q": "1.4.*",
-    "redis": "2.6.*",
-    "request": "2.*",
-    "socket.io": "^1.3.*",
-    "winston": ">=2.0"
+    "q": "1.5.*",
+    "redis": "2.7.*",
+    "request": "2.81.*",
+    "socket.io": "^1.7.*",
+    "winston": "2.3.*"
   },
   "description": "Redisfire is not related with Firebase. But Redisfire provides very similar features like Firebase.",
   "bugs": {
