--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "postinstall": "node utils/postinstall",
@@ -21,22 +21,19 @@
     "redisfire-import": "./bin/redisfire-import"
   },
   "dependencies": {
-    "body-parser": "1.18.*",
+    "body-parser": "1.19.*",
     "commander": "^2.9.*",
     "cookie-parser": "1.4.*",
-    "debug": "3.0.*",
     "express": ">4.5",
-    "jade": "1.*",
     "lodash": "~4.*",
     "md5": "^2.0.0",
     "mongoose": "^4.3.*",
-    "morgan": "1.8.*",
+    "morgan": "1.9.*",
     "node-json-minify": "1.*",
     "q": "1.5.*",
     "redis": "2.8.*",
-    "request": "2.81.*",
-    "socket.io": "1.7.*",
-    "winston": "2.3.*"
+    "request": "2.88.*",
+    "socket.io": "2.2.*"
   },
   "description": "Redisfire is not related with Firebase. But Redisfire provides very similar features like Firebase.",
   "bugs": {
@@ -57,7 +54,6 @@
     "mocha-lcov-reporter": "^1.0.0",
     "nyc": "^3.2.2",
     "should": "7.1.1",
-    "socket.io-client": "^1.3.7",
     "supertest": "^1.1.0"
   }
 }
