--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisfire",
-  "version": "0.0.29",
+  "version": "0.0.30",
   "author": "Jongsoon Park <althjs@gmail.com>",
   "scripts": {
     "postinstall": "node utils/postinstall",
@@ -27,7 +27,7 @@
     "express": ">4.5",
     "lodash": "~4.*",
     "md5": "^2.0.0",
-    "mongoose": "^4.3.*",
+    "mongoose": "5.5.*",
     "morgan": "1.9.*",
     "node-json-minify": "1.*",
     "q": "1.5.*",
